--- a/index.html
+++ b/index.html
@@ -134,9 +134,20 @@
         </div>   
     </main>
     <footer>
-        <div class="call-buttom">
-         <i class="fas fa-microphone mic"></i>
-         <h4>Mute</h4>
+        <div class="call-button">
+            <nav class="button">
+                <ul>
+                    <li>
+                        <i class="fas fa-video"></i>
+                        <h4>Stop</h4>
+                    </li>
+                    <li>
+                        <i class="fas fa-microphone"></i>
+                        <h4>Mute</h4>
+                    </li>
+                    
+                </ul>
+            </nav> 
         </div>
         <div class="central-bar">
             <nav class="central-nav">
@@ -147,31 +158,31 @@
                     </li>
                     <li>
                         <i class="fas fa-user-plus"></i>
-                        <h4>Invite</h4>
+                        <h4>Manage Participants</h4>
                     </li>
                     <li>
-                        <i class="fas fa-user-plus"></i>
-                        <h4>Invite</h4>
+                        <i class="fas fa-chart-bar"></i>
+                        <h4>Polling</h4>
                     </li>
                     <li>
-                        <i class="fas fa-user-plus"></i>
-                        <h4>Invite</h4>
+                        <i class="fas fa-share-square share"></i>
+                        <h4>Share Screen</h4>
                     </li>
                     <li>
-                        <i class="fas fa-user-plus"></i>
-                        <h4>Invite</h4>
+                        <i class="fas fa-comment"></i>
+                        <h4>Chat</h4>
                     </li>
                     <li>
-                        <i class="fas fa-user-plus"></i>
-                        <h4>Invite</h4>
+                        <i class="fas fa-record-vinyl"></i>
+                        <h4>Record</h4>
                     </li>
                     <li>
-                        <i class="fas fa-user-plus"></i>
-                        <h4>Invite</h4>
+                        <i class="fas fa-th-large"></i>
+                        <h4>Brakout Rooms</h4>
                     </li>
                     <li>
-                        <i class="fas fa-user-plus"></i>
-                        <h4>Invite</h4>
+                        <i class="fas fa-ellipsis-h"></i>
+                        <h4>More</h4>
                     </li>                  
                 </ul>
             </nav>
